Created E4A inspired by logo-small.jpg and LICENSE.txt; Edited settings and HomeForm

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,5 +1,6 @@
 unique_ids:
   assets:
+    E4A inspired by logo-small.jpg: '1736960198645563772365398.8563'
     standard-page.html: EV7PUOALGDZ3XFGWTWPD32DJSNCJ5JHC
     theme.css: AQ4VZGWXHQIKDWX536F42RUQWFYRUKXP
   forms:
