--- a/client_code/HomeForm.yaml
+++ b/client_code/HomeForm.yaml
@@ -58,5 +58,5 @@ components:
   properties: {col_widths: '{}'}
   type: ColumnPanel
 container:
-  properties: {html: '@theme:standard-page.html'}
+  properties: {html: '@theme:standard-page.html', visible: true}
   type: HtmlTemplate
