--- a/client_code/HomeAnonComponent.yaml
+++ b/client_code/HomeAnonComponent.yaml
@@ -32,7 +32,7 @@ components:
     type: Button
   - layout_properties: {grid_position: 'NUYYYN,ODXZKK'}
     name: button_3
-    properties: {background: '#FFA421', bold: true, foreground: white, text: RE-start an existing game}
+    properties: {background: '#FFA421', bold: true, foreground: 'theme:Black', text: RE-start an existing game}
     type: Button
   - layout_properties: {grid_position: 'NUYYYN,IXMGYI'}
     name: button_2
@@ -42,11 +42,16 @@ components:
   name: card_1
   properties: {role: card}
   type: ColumnPanel
-- event_bindings: {click: button_register_click}
-  layout_properties: {grid_position: 'ZBPSBS,DTJCAF'}
-  name: button_register
-  properties: {align: center, background: '#00BBFF', bold: true, border: '', enabled: true, font: '', font_size: null, foreground: 'theme:White', icon: 'fa:', icon_align: left, italic: false, role: primary-color, spacing_above: small, spacing_below: small, text: Click here for step-by-step instructions, tooltip: '', underline: false, visible: true}
-  type: Button
+- components:
+  - event_bindings: {}
+    layout_properties: {grid_position: 'LPBRXS,QRRPOT'}
+    name: button_instuctions
+    properties: {align: center, background: '#00BBFF', bold: true, border: '', enabled: true, font: '', font_size: null, foreground: 'theme:White', icon: 'fa:', icon_align: left, italic: false, role: primary-color, spacing_above: small, spacing_below: small, text: Click here for step-by-step instructions, tooltip: '', underline: false, visible: true}
+    type: Button
+  layout_properties: {grid_position: 'DHQLXI,PYVSCC'}
+  name: link_1
+  properties: {url: 'http://sdggame.blue-way.net'}
+  type: Link
 - components:
   - components:
     - layout_properties: {grid_position: 'XCIUXC,IIFAQW OKBCID,PAGLPP'}
