--- a/client_code/HomeAnonComponent.yaml
+++ b/client_code/HomeAnonComponent.yaml
@@ -31,11 +31,11 @@ components:
       tooltip: Click here if you are the Game Master / Mistress and you want to start a New Game
     type: Button
   - layout_properties: {grid_position: 'NUYYYN,ODXZKK'}
-    name: button_3
+    name: restart
     properties: {background: '#FFA421', bold: true, foreground: 'theme:Black', text: RE-start an existing game}
     type: Button
   - layout_properties: {grid_position: 'NUYYYN,IXMGYI'}
-    name: button_2
+    name: join_game
     properties: {background: '#8DC92F', bold: true, foreground: white, text: Join an existing Game}
     type: Button
   layout_properties: {grid_position: 'GNYQCE,PSYUSB'}
