--- a/client_code/HomeAnonComponent.yaml
+++ b/client_code/HomeAnonComponent.yaml
@@ -17,6 +17,7 @@ components:
   type: Link
 - components:
   - data_bindings: []
+    event_bindings: {show: new_game_show}
     layout_properties: {grid_position: 'NUYYYN,DTKSVA'}
     name: new_game
     properties:
@@ -24,6 +25,8 @@ components:
       background: '#D9365E'
       bold: true
       foreground: white
+      icon: ''
+      role: mytooltip
       spacing:
         margin: [null, 0, null, null]
         padding: [null, '16', null, null]
