Created get_games_meta and HomeFirst; Edited settings, HomeForm and navigation; Deleted HomeAnonComponent

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -7,8 +7,8 @@ unique_ids:
     AccountComponent: NH52OYX2Y2V5ANRBAPGYZ5GIDQQTTBMP
     AddMeasurementComponent: 4GXO2Q674BWTTYSBTLJEJYHY7NYDVVOD
     CompareComponent: 3QZRKXFISZYWNOQJZBOICXQTKIP3E6IF
-    HomeAnonComponent: AYAIFBD44DNCRAXU7ADMNZXA47VROE55
     HomeDetailsComponent: 3VYVZN2F4O4MJ35YZGRSD4OXWZ4SWXR5
+    HomeFirst: AYAIFBD44DNCRAXU7ADMNZXA47VROE55
     HomeForm: I37VIHIF3AQJZJ2A4PZ6TVQRFQRB5GWB
     SetHeightComponent: PM3EGH6BL5EPMLJNIG5H7CE3IGB5VNQN
   modules:
@@ -19,4 +19,5 @@ unique_ids:
     api: GWFXXBWQV7LNXH4MYZK74AEGCA3BO7KF
     auth: 4JLAEMTXBDBVMVORGYXJCPFTC3ZIX777
     data_loader: MRBBMSJRS64BRWH5MUH4JBDHSTKTWPGI
+    get_games_meta: ONOVVJZOVPH4S6GTNWERPFYGMMA5VXBL
     measurement_service: J3MZJVLZLO5NAHREMCQNMFWP5TH5LKVC
