--- a/anvil.yaml
+++ b/anvil.yaml
@@ -18,6 +18,26 @@ db_schema:
       type: number
     server: full
     title: Averages
+  games:
+    client: none
+    columns:
+    - admin_ui: {width: 200}
+      name: game_id
+      type: string
+    - admin_ui: {width: 200}
+      name: first_started
+      type: datetime
+    - admin_ui: {width: 200}
+      name: closed
+      type: datetime
+    - admin_ui: {width: 200}
+      name: is_open
+      type: bool
+    - admin_ui: {width: 200}
+      name: next_round
+      type: number
+    server: full
+    title: Games
   measurements:
     client: none
     columns:
@@ -85,7 +105,7 @@ renamed: true
 runtime_options: {client_version: '3', server_spec: null, server_version: python3-sandbox, version: 2}
 services:
 - client_config: {allow_remember_me: true, allow_signup: true, confirm_email: false, enable_automatically: true, remember_me_days: 365, use_email: true, use_google: true}
-  server_config: {user_table: 30165}
+  server_config: {user_table: users}
   source: /runtime/services/anvil/users.yml
 - client_config: {}
   server_config: {}
