--- a/client_code/HomeForm.yaml
+++ b/client_code/HomeForm.yaml
@@ -39,9 +39,9 @@ components:
   type: Label
 - components:
   - event_bindings: {click: link_home_click}
-    layout_properties: {grid_position: 'YTAWVA,ZUWSRW'}
+    layout_properties: {grid_position: 'YTAWVA,ZUWSRW', row_background: 'theme:e4aLightGray'}
     name: link_home
-    properties: {align: left, background: '', bold: false, border: '', col_spacing: medium, col_widths: '', font: '', font_size: null, foreground: '', icon: 'fa:home', icon_align: left, italic: false, role: null, spacing_above: small, spacing_below: small, text: Home, tooltip: '', underline: false, url: '', visible: true, wrap_on: mobile}
+    properties: {align: left, background: '', bold: true, border: '', col_spacing: small, col_widths: '', font: '', font_size: 18, foreground: '', icon: 'fa:home', icon_align: left, italic: false, role: null, spacing: null, spacing_above: small, spacing_below: small, text: Home, text_padding: null, tooltip: '', underline: false, url: '', visible: true, wrap_on: mobile}
     type: Link
   - event_bindings: {click: link_add_click}
     layout_properties: {grid_position: 'WAMBHU,AHOEGL'}
